My Dev/force-app/main/default/objects/Record_DML_Event__e/Record_DML_Event__e.object-meta.xml
<CustomObject>
    <description>A generic PE to perform Async Record DML on any of the provided object</description>
    <label>Record DML Event</label>
    <pluralLabel>Record DML Events</pluralLabel>
</CustomObject>