My Dev/force-app/main/default/objects/Record_DML_Event__e/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Name of the Object on which DML needs to be performed</description>
    <label>Object Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>