My Dev/force-app/main/default/objects/Record_DML_Event__e/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Type of DML Operation(INSERT, UPDATE, UPSERT, DELETE</description>
    <label>Operation</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>