My Dev/force-app/main/default/objects/Record_DML_Event__e/fields/Record_JSON__c.field-meta.xml
<CustomField>
    <fullName>Record_JSON__c</fullName>
    <label>Record JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>