My Dev/force-app/main/default/objects/Record_DML_Event__e/fields/Upsert_Key__c.field-meta.xml
<CustomField>
    <fullName>Upsert_Key__c</fullName>
    <description>Field API name that needs to be considered for UPSERT</description>
    <label>Upsert Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>